03-Nodejs-hello-world/k8s_manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-hello-app
  labels:
    app: nodejs-hello-app
    app.kubernetes.io/name: nodejs-hello-app
    app.kubernetes.io/part-of: nodejs-apps
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-hello-app
  template:
    metadata:
      labels:
        app: nodejs-hello-app
        deployment: nodejs-hello-app
      annotations:
    spec:
      containers:
        - name: nodejs-hello-app
          image: 'quay.io/mukeshs1306/noventiqvp-nodejs-hello:latest'
          ports:
            - containerPort: 9001
              protocol: TCP
          resources: {}
